# astragent-mcp

./: .gitignore  pyproject.toml
.github/workflows/: publish.yml
src/astra_mcp/: __init__.py  cli.py  client.py  config.py  server.py
src/astramcp/: __init__.py  cli.py  client.py  config.py  server.py
tests/: test_astra_mcp.py  test_astramcp.py
