[project]
name = "astramcp"
version = "0.1.0"
description = "Expose AstrBot agents as MCP tools via CLI"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.4.2",
    "typer>=0.26.7",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
    "pyclack-cli>=0.4.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx2>=2.3.0",
]

[project.scripts]
astra = "astramcp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/astramcp"]

[dependency-groups]
dev = [
    "hatchling>=1.30.1",
    "pytest>=9.0.3",
]
